add antlr grammar
forgot to add grammar

implement antlr analyzing and dot visualization; create tests' provide example

attempt to show pdf

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
   - "3.8"
-
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install antlr4
 install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash ./miniconda.sh -b -p $HOME/miniconda
@@ -20,4 +22,5 @@ install:
 
   - python3 -m pip install -r requirements_pip.txt
 script:
-  - pytest
+  - cd src/antlr && antlr4 -Dlanguage=Python3 db_grammar.g4 && cd ../ ../
+  - python -m pytest
